--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Timetable</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
-    <link href="images/fab.gif" rel="shortcut icon" type="image/gif" />
+    <link href="./images/fab.gif?" rel="shortcut icon" type="image/gif" />
     <script src="js/libs/angular.min.js"></script>
 </head>
 
